--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="container flex is-between">
         <div class="is-left">
             <a class="navbar-brand" href="/">
-                <img src="{{ 'images/avatar.jpeg' | absolute_url }}" alt="rachidsakara">
+                <img src="{{ 'images/avatar.png' | absolute_url }}" alt="rachidsakara">
             </a>
         </div>
         <div class="is-right">
