--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,14 @@
-<footer class="footer">
-  <div class="container flex is-between">
-      <div class="is-left">
-          <p>Built with <a href="https://jekyllrb.com/">Jekyll</a> &amp; hosted with <a href="https://pages.github.com/">Github Pages</a></p>
-      </div>
-      <div class="is-right">
-          <ul class="footer-social">
-              <li>
-                <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/{{ site.github_username }}" target="_blank">
-                    <i class="fa fa-github"></i>
-                </a>
-              </li>
-              <li>
-                <a href="{{ site.url }}/feed.xml" target="_blank">
-                    <i class="fa fa-rss"></i>
-                </a>
-              </li>
-          </ul>
-      </div>
-  </div>
-</footer>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<section class="section hero welcome is-small">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <h1 class="title body-title">
+              Create Your Personnel Site Now!
+            </h1>
+            <p>
+                Built with <a class="button is-small is-dark is-rounded" href="https://jekyllrb.com/" target="_blank">Jekyll</a> and hosted with <a class="button is-small is-dark is-rounded" href="https://pages.github.com/" target="_blank">Github Pages</a>
 
-  ga('create', 'UA-67851486-1', 'auto');
-  ga('send', 'pageview');
-</script>
+            </p>
+
+        </div>
+    </div>
+</section>
