--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,84 @@
-<nav class="navbar">
-    <div class="container flex is-between">
-        <div class="is-left">
-            <a class="navbar-brand" href="/">
-                <img src="{{ 'images/avatar.png' | absolute_url }}" alt="rachidsakara">
-            </a>
-        </div>
-        <div class="is-right">
-            <ul class="navbar-list">
-                <li {% if page.url == '/' %}class="current"{% endif %}>
-                    <a href="/">Home</a>
-                </li>
-                <li {% if page.url == '/blog.html' %}class="current"{% endif %}>
-                    <a href="{{ 'blog.html' | absolute_url }}">Blog</a>
-                </li>
-                <li {% if page.url == '/about.html' %}class="current"{% endif %}>
-                    <a href="{{ 'about.html' | absolute_url }}">About</a>
-                </li>
-            </ul>
-        </div>
+
+
+
+<nav class="navbar has-shadow is-spaced">
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+      <img src="{{ 'images/logo.png' | absolute_url }}" alt="Bulma: a modern CSS framework based on Flexbox" width="156" height="128">
+    </a>
+      <span class="navbar-burger burger" data-target="navbarMenuHeroB">
+        <span></span>
+        <span></span>
+        <span></span>
+      </span>
     </div>
+    <div id="navbarMenuHeroB" class="navbar-menu">
+
+      <div class="navbar-start">
+      <a class="navbar-item bd-navbar-item-documentation  is-active" href="/">
+        <span class="icon has-text-dark">
+          <i class="fas fa-home"></i>
+        </span>
+        <span class="is-hidden-touch is-hidden-widescreen">
+          Home
+        </span>
+        <span class="is-hidden-desktop-only">
+          Home
+        </span>
+      </a>
+      
+        <a class="navbar-item bd-navbar-item-blog " href="{{ 'blog.html' | absolute_url }}">
+          <span class="icon has-text-dark">
+            <i class="fas fa-pen"></i>
+          </span>
+
+          <span>Blog</span>
+        </a>
+
+
+    </div>
+
+
+      <div class="navbar-end">
+
+         <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+          <span class="icon" style="color: #55acee;">
+            <i class="fab fa-lg fa-twitter"></i>
+          </span>
+         </a>
+
+          <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://github.com/{{ site.github_username }}" target="_blank">
+          <span class="icon" style="color: #333;">
+            <i class="fab fa-lg fa-github-alt"></i>
+          </span>
+         </a>
+
+         <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://en-gb.facebook.com/public/Rachid-Sakara" target="_blank">
+          <span class="icon" style="color: #55acee;">
+            <i class="fab fa-lg fa-facebook"></i>
+          </span>
+         </a>
+
+         <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://plus.google.com/111148540833233519980" target="_blank">
+          <span class="icon has-text-danger" style="color: #55acee;">
+            <i class="fab fa-lg fa-google-plus"></i>
+          </span>
+         </a>
+
+         <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://ma.linkedin.com/in/rachid-sakara-b25992120" target="_blank">
+          <span class="icon" style="color: #55acee;">
+            <i class="fab fa-lg fa-linkedin"></i>
+          </span>
+         </a>
+
+         <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="mailto:rachidsakaraoo7@email.com" target="_blank">
+          <span class="icon has-text-primary" style="color: #55acee;">
+            <i class="fas fa-lg fa-at"></i>
+          </span>
+         </a>
+
+      </div>
+    </div>
+  </div>
 </nav>
