--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,10 @@
 <html>
     {% include head.html %}
 <body>
-    <div id="app">
         {% include header.html %}
-        <main class="main">
-            {{ content }}
-        </main>
+           {{ content }}
         {% include footer.html %}
-    </div>
+
+        <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/js/bulma.js"></script>
 </body>
 </html>
