--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,33 +1,9 @@
 ---
 layout: default
 ---
-<header class="header">
-		<div class="container">
-				<h1 class="header-heading">{{ page.title }}</h1>
-				<time class="header-date">Published on {{ page.date | date: "%b %-d, %Y" }} by Rachid Laasri</time>
-				<ul class="header-social">
-					<li>
-						<a class="button is-twitter is-moving" href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
-							<i class="fa fa-twitter"></i>
-							<span>@{{ site.twitter_username }}</span>
-						</a>
-					</li>
-					<li>
-						<a class="button is-github is-moving" href="https://github.com/{{ site.github_username }}" target="_blank">
-							<i class="fa fa-github"></i>
-							<span>{{ site.twitter_username }}</span>
-						</a>
-					</li>
-					<li>
-						<a class="button is-google is-moving" href="mailto:{{ site.email }}">
-							<i class="fa fa-google"></i>
-							<span>{{ site.email }}</span>
-						</a>
-					</li>
-				</ul>
-		</div>
-</header>
-<section class="post-single">
+<br>
+<br>
+<section class="section post-single">
 	<div class="container">
 		{{ content }}
 		{% if page.comments_enabled == true %}
