--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,6 +41,12 @@
 
 
       <div class="navbar-end">
+        
+        <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://www.youtube.com/channel/UC2jhPR603smo59HTLP66ljA" target="_blank">
+          <span class="icon" style="color: #ff0000;">
+            <i class="fab fa-lg fa-youtube"></i>
+          </span>
+         </a>
 
          <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
           <span class="icon" style="color: #55acee;">
