--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,7 @@
 
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+    
+    <!--Add the AOS css file-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
