--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,5 +7,10 @@
         {% include footer.html %}
 
         <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/js/bulma.js"></script>
+    
+         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+         <script>
+            AOS.init();
+         </script>
 </body>
 </html>
