--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,14 +7,13 @@
       <a class="navbar-item" href="https://bulma.io">
       <img src="{{ 'images/logo.png' | absolute_url }}" alt="Bulma: a modern CSS framework based on Flexbox" width="156" height="128">
     </a>
-      <span class="navbar-burger burger" data-target="navbarMenuHeroB">
+      <span class="navbar-burger burger" onclick="document.querySelector('#navbarMenuHeroB').classList.toggle('is-active');">
         <span></span>
         <span></span>
         <span></span>
       </span>
     </div>
     <div id="navbarMenuHeroB" class="navbar-menu">
-
       <div class="navbar-start">
       <a class="navbar-item bd-navbar-item-documentation  is-active" href="/">
         <span class="icon has-text-dark">
